--- a/plugin.xml
+++ b/plugin.xml
@@ -29,7 +29,7 @@
         <source-file src="src/ios/src/DGGeofencing.m" />
     </platform>
 
-    <platform name="WP8">
+    <platform name="wp8">
         <config-file target="config.xml" parent="/*">
             <feature name="DGGeofencing">
                 <param name="wp-package" value="DGGeofencing" onload="true" />
