--- a/plugin.xml
+++ b/plugin.xml
@@ -50,7 +50,7 @@ w
     </platform>
 
 	<platform name="android">
-
+	<framework src="com.google.android.gms:google-play-services:13.0.0" />
         <source-file src="src/android/src/com/phonegap/geofencing/DGGeofencing.java" target-dir="src/com/phonegap/geofencing" />
         <source-file src="src/android/src/com/phonegap/geofencing/LocationChangedListener.java" target-dir="src/com/phonegap/geofencing" />
         <source-file src="src/android/src/com/phonegap/geofencing/ProximityReceiver.java" target-dir="src/com/phonegap/geofencing" />
